# ballOnPlateDesktop

./: BallOnPlateDesktopV4.qmlproject  BallOnPlateDesktopV4.qmlproject.qtds  BallOnPlateDesktopV4.qmlproject.qtds.9a00cb9  CMakeLists.txt  README.md  qmlmodules
asset_imports/Quick3DAssets/: CMakeLists.txt
asset_imports/Quick3DAssets/BallOnPlateModel/: BallOnPlateModel.qml  CMakeLists.txt  _importdata.json  qmldir
asset_imports/Quick3DAssets/BallOnPlateModel/meshes/: ball_mesh.mesh  heim_Joint_Eye_ball_mesh.mesh  heim_Joint_bearing_mesh.mesh  heim_joint_hold_mesh.mesh  hylsa2_mesh.mesh  hylsa_mesh.mesh  joint_rod_mesh.mesh  node6.mesh  node9.mesh  pan_head_cross_recess_screw_iso_mesh.mesh  pan_head_cross_recess_screw_iso_mesh98.mesh  part111_mesh.mesh  partface_mesh.mesh  screen_mesh.mesh  servo2_mesh.mesh  servo_mesh.mesh  servo_rodd_mesh.mesh  spring_pin_slotted_ld_iso_mesh.mesh  spring_pin_slotted_ld_iso_mesh88.mesh  univ_mesh.mesh
asset_imports/Quick3DAssets/BallOnPlateModel/source scene/: BallOnPlateModel.fbx
content/: App.qml
imports/: CMakeLists.txt
imports/BallOnPlateDesktopV4/: CMakeLists.txt  qmldir
imports/BallOnPlateDesktopV4/designer/: plugin.metainfo
src/: communication.cpp  communication.h  import_qml_plugins.h  main.cpp
